# any-singleton

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  TODO.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
src/any_singleton/: __init__.py  singletons.py
tests/: conftest.py
tests/fixtures/: clean_up.py
tests/units/: test_singletons.py
